Nurbs Edit Handle thickness regression #47586

Closed
opened 2016-02-26 17:03:30 +01:00 by Michael P. · 8 comments

System Information
System: Windows 7 64bit
RAM: 4096 MB
renderer: 'GeForce GTX 760/PCIe/SSE2'
vendor: 'NVIDIA Corporation'
version: '4.5.0 NVIDIA 353.30'

Blender Version
Broken: blender 2.76.x (0b13989)
Worked: blender 2.76

Short description of error

Exact steps for others to reproduce the error
Please see attached animated GIF for more.

This regression can be found here:
Curve -> Nurbs Curve
Curve -> Nurbs Circle
Surface -> Nurbs all: Curve, Circle, Surface, Cylinder, Sphere, Torus

nurbs-edit-handle-thickness-regression.gif
nurbs-edit-handle-thickness-regression.blend

System Information System: Windows 7 64bit RAM: 4096 MB renderer: 'GeForce GTX 760/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.5.0 NVIDIA 353.30' Blender Version Broken: blender 2.76.x (0b13989) Worked: blender 2.76 Short description of error Exact steps for others to reproduce the error Please see attached animated GIF for more. This regression can be found here: Curve -> Nurbs Curve Curve -> Nurbs Circle Surface -> Nurbs all: Curve, Circle, Surface, Cylinder, Sphere, Torus ![nurbs-edit-handle-thickness-regression.gif](https://archive.blender.org/developer/F285941/nurbs-edit-handle-thickness-regression.gif) [nurbs-edit-handle-thickness-regression.blend](https://archive.blender.org/developer/F285942/nurbs-edit-handle-thickness-regression.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MichaelParucha

Added subscriber: @MichaelParucha

Added subscriber: @mont29

Added subscriber: @mont29
Campbell Barton was assigned by Bastien Montagne 2016-02-26 17:36:15 +01:00

You'll get all curves-related line thickness assigned to you, Campbell… :P

You'll get all curves-related line thickness assigned to you, Campbell… :P
Member

Added subscriber: @MikeErwin

Added subscriber: @MikeErwin
Member

Feel free to assign line thickness bugs to me as well. Clean up my own mess :|

Feel free to assign line thickness bugs to me as well. Clean up my own mess :|

This issue was referenced by 4cbc3d2fdd

This issue was referenced by 4cbc3d2fddb805ecc524117eaaa67df8417031a6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47586
No description provided.