Fix T47586: Nurbs handle thickness regression